[gd_scene load_steps=3 format=3 uid="uid://b7fqpwec5evxm"]

[ext_resource type="Script" uid="uid://cf0bfe16kt7us" path="res://Scripts/MainMenu.gd" id="1_menu"]
[ext_resource type="PackedScene" path="res://UI/SaveManagementMenu.tscn" id="2_save_mgmt"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "UNTITLED GAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="LoadGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Load Game"

[node name="ManageSavesButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Manage Saves"

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="SaveManagementMenu" parent="." instance=ExtResource("2_save_mgmt")]
layout_mode = 1

[connection signal="pressed" from="VBoxContainer/NewGameButton" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/LoadGameButton" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="VBoxContainer/ManageSavesButton" to="." method="_on_manage_saves_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_pressed"]
